apps/cli/src/tui/widgets/snapshots/graphlanes__base_missing.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
┌─ Branches ───────────────────────────────────────────────┐
│ ⚠  Base branch main not found                            │
│ ───•─• claude-1 ↑2 ↓0                                    │
│ ───• claude-2 ↑1 ↓0                                      │
└──────────────────────────────────────────────────────────┘
=== styles (truecolor, unicode) ===
0:0-2 fg=#949494
0:3-10 fg=#949494 BOLD
0:11-59 fg=#949494
1:0-0 fg=#949494
1:2-3 fg=#d29922
1:5-30 fg=#d29922
1:59-59 fg=#949494
2:0-0 fg=#949494
2:2-2 fg=#bc8cff
2:3-7 fg=#e69f00
2:9-16 fg=#e69f00 BOLD
2:18-22 fg=#949494
2:59-59 fg=#949494
3:0-0 fg=#949494
3:2-2 fg=#bc8cff
3:3-5 fg=#56b4e9
3:7-14 fg=#56b4e9 BOLD
3:16-20 fg=#949494
3:59-59 fg=#949494
4:0-59 fg=#949494
=== styles (256, unicode) ===
0:0-2 fg=@246
0:3-10 fg=@246 BOLD
0:11-59 fg=@246
1:0-0 fg=@246
1:2-3 fg=@172
1:5-30 fg=@172
1:59-59 fg=@246
2:0-0 fg=@246
2:2-2 fg=@141
2:3-7 fg=@178
2:9-16 fg=@178 BOLD
2:18-22 fg=@246
2:59-59 fg=@246
3:0-0 fg=@246
3:2-2 fg=@141
3:3-5 fg=@74
3:7-14 fg=@74 BOLD
3:16-20 fg=@246
3:59-59 fg=@246
4:0-59 fg=@246
=== styles (16, unicode) ===
0:0-2 fg=DarkGray
0:3-10 fg=DarkGray BOLD
0:11-59 fg=DarkGray
1:0-0 fg=DarkGray
1:2-3 fg=Yellow
1:5-30 fg=Yellow
1:59-59 fg=DarkGray
2:0-0 fg=DarkGray
2:2-2 fg=Magenta
2:3-7 fg=Yellow
2:9-16 fg=Yellow BOLD
2:18-22 fg=DarkGray
2:59-59 fg=DarkGray
3:0-0 fg=DarkGray
3:2-2 fg=Magenta
3:3-5 fg=Cyan
3:7-14 fg=Cyan BOLD
3:16-20 fg=DarkGray
3:59-59 fg=DarkGray
4:0-59 fg=DarkGray
=== styles (no-color, unicode) ===
0:0-2 DIM
0:3-10 BOLD | DIM
0:11-59 DIM
1:0-0 DIM
1:2-3 BOLD
1:5-30 BOLD
1:59-59 DIM
2:0-0 DIM
2:9-16 BOLD
2:18-22 DIM
2:59-59 DIM
3:0-0 DIM
3:7-14 BOLD
3:16-20 DIM
3:59-59 DIM
4:0-59 DIM
=== styles (high-contrast, unicode) ===
0:0-2 fg=#c6c6c6 bg=#000000
0:3-10 fg=#c6c6c6 bg=#000000 BOLD
0:11-59 fg=#c6c6c6 bg=#000000
1:0-0 fg=#c6c6c6 bg=#000000
1:1-1 fg=#ffffff bg=#000000
1:2-3 fg=#ffe066 bg=#000000
1:4-4 fg=#ffffff bg=#000000
1:5-30 fg=#ffe066 bg=#000000
1:31-58 fg=#ffffff bg=#000000
1:59-59 fg=#c6c6c6 bg=#000000
2:0-0 fg=#c6c6c6 bg=#000000
2:1-1 fg=#ffffff bg=#000000
2:2-2 fg=#e2c5ff bg=#000000
2:3-7 fg=#e69f00 bg=#000000
2:8-8 fg=#ffffff bg=#000000
2:9-16 fg=#e69f00 bg=#000000 BOLD
2:17-17 fg=#ffffff bg=#000000
2:18-22 fg=#c6c6c6 bg=#000000
2:23-58 fg=#ffffff bg=#000000
2:59-59 fg=#c6c6c6 bg=#000000
3:0-0 fg=#c6c6c6 bg=#000000
3:1-1 fg=#ffffff bg=#000000
3:2-2 fg=#e2c5ff bg=#000000
3:3-5 fg=#56b4e9 bg=#000000
3:6-6 fg=#ffffff bg=#000000
3:7-14 fg=#56b4e9 bg=#000000 BOLD
3:15-15 fg=#ffffff bg=#000000
3:16-20 fg=#c6c6c6 bg=#000000
3:21-58 fg=#ffffff bg=#000000
3:59-59 fg=#c6c6c6 bg=#000000
4:0-59 fg=#c6c6c6 bg=#000000
=== text (ascii) ===
+- Branches -----------------------------------------------+
| [!] Base branch main not found                           |
| ---o-o claude-1 +2 -0                                    |
| ---o claude-2 +1 -0                                      |
+----------------------------------------------------------+
=== styles (truecolor, ascii) ===
0:0-2 fg=#949494
0:3-10 fg=#949494 BOLD
0:11-59 fg=#949494
1:0-0 fg=#949494
1:2-4 fg=#d29922
1:6-31 fg=#d29922
1:59-59 fg=#949494
2:0-0 fg=#949494
2:2-2 fg=#bc8cff
2:3-7 fg=#e69f00
2:9-16 fg=#e69f00 BOLD
2:18-22 fg=#949494
2:59-59 fg=#949494
3:0-0 fg=#949494
3:2-2 fg=#bc8cff
3:3-5 fg=#56b4e9
3:7-14 fg=#56b4e9 BOLD
3:16-20 fg=#949494
3:59-59 fg=#949494
4:0-59 fg=#949494
