apps/cli/src/tui/widgets/snapshots/graphlanes__three_agents.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
┏━ › Branches ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃ • main                                                   ┃
┃ ├──•─•─• claude-1 ↑3 ↓1 ⚡                               ┃
┃ ├──•─• claude-2 ↑2 ↓0                                    ┃
┃ └──•─•─•─•─•─• claude-3 ↑9 ↓4                            ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
=== styles (truecolor, unicode) ===
0:0-4 fg=#ffe066
0:5-12 fg=#ffe066 BOLD
0:13-59 fg=#ffe066
1:0-0 fg=#ffe066
1:2-2 fg=#bc8cff
1:4-7 fg=#bc8cff BOLD
1:59-59 fg=#ffe066
2:0-0 fg=#ffe066
2:2-2 fg=#bc8cff
2:3-9 fg=#e69f00
2:11-18 fg=#e69f00 BOLD
2:20-24 fg=#949494
2:26-26 fg=#d29922
2:59-59 fg=#ffe066
3:0-0 fg=#ffe066
3:2-2 fg=#bc8cff
3:3-7 fg=#56b4e9
3:9-16 fg=#56b4e9 BOLD
3:18-22 fg=#949494
3:59-59 fg=#ffe066
4:0-0 fg=#ffe066
4:2-2 fg=#bc8cff
4:3-15 fg=#009e73
4:17-24 fg=#009e73 BOLD
4:26-30 fg=#949494
4:59-59 fg=#ffe066
5:0-59 fg=#ffe066
=== styles (256, unicode) ===
0:0-4 fg=@221
0:5-12 fg=@221 BOLD
0:13-59 fg=@221
1:0-0 fg=@221
1:2-2 fg=@141
1:4-7 fg=@141 BOLD
1:59-59 fg=@221
2:0-0 fg=@221
2:2-2 fg=@141
2:3-9 fg=@178
2:11-18 fg=@178 BOLD
2:20-24 fg=@246
2:26-26 fg=@172
2:59-59 fg=@221
3:0-0 fg=@221
3:2-2 fg=@141
3:3-7 fg=@74
3:9-16 fg=@74 BOLD
3:18-22 fg=@246
3:59-59 fg=@221
4:0-0 fg=@221
4:2-2 fg=@141
4:3-15 fg=@36
4:17-24 fg=@36 BOLD
4:26-30 fg=@246
4:59-59 fg=@221
5:0-59 fg=@221
=== styles (16, unicode) ===
0:0-4 fg=LightYellow
0:5-12 fg=LightYellow BOLD
0:13-59 fg=LightYellow
1:0-0 fg=LightYellow
1:2-2 fg=Magenta
1:4-7 fg=Magenta BOLD
1:59-59 fg=LightYellow
2:0-0 fg=LightYellow
2:2-2 fg=Magenta
2:3-9 fg=Yellow
2:11-18 fg=Yellow BOLD
2:20-24 fg=DarkGray
2:26-26 fg=Yellow
2:59-59 fg=LightYellow
3:0-0 fg=LightYellow
3:2-2 fg=Magenta
3:3-7 fg=Cyan
3:9-16 fg=Cyan BOLD
3:18-22 fg=DarkGray
3:59-59 fg=LightYellow
4:0-0 fg=LightYellow
4:2-2 fg=Magenta
4:3-15 fg=Green
4:17-24 fg=Green BOLD
4:26-30 fg=DarkGray
4:59-59 fg=LightYellow
5:0-59 fg=LightYellow
=== styles (no-color, unicode) ===
0:0-59 BOLD | REVERSED
1:0-0 BOLD | REVERSED
1:4-7 BOLD
1:59-59 BOLD | REVERSED
2:0-0 BOLD | REVERSED
2:11-18 BOLD
2:20-24 DIM
2:26-26 BOLD
2:59-59 BOLD | REVERSED
3:0-0 BOLD | REVERSED
3:9-16 BOLD
3:18-22 DIM
3:59-59 BOLD | REVERSED
4:0-0 BOLD | REVERSED
4:17-24 BOLD
4:26-30 DIM
4:59-59 BOLD | REVERSED
5:0-59 BOLD | REVERSED
=== styles (high-contrast, unicode) ===
0:0-4 fg=#ffe066 bg=#000000
0:5-12 fg=#ffe066 bg=#000000 BOLD
0:13-59 fg=#ffe066 bg=#000000
1:0-0 fg=#ffe066 bg=#000000
1:1-1 fg=#ffffff bg=#000000
1:2-2 fg=#e2c5ff bg=#000000
1:3-3 fg=#ffffff bg=#000000
1:4-7 fg=#e2c5ff bg=#000000 BOLD
1:8-58 fg=#ffffff bg=#000000
1:59-59 fg=#ffe066 bg=#000000
2:0-0 fg=#ffe066 bg=#000000
2:1-1 fg=#ffffff bg=#000000
2:2-2 fg=#e2c5ff bg=#000000
2:3-9 fg=#e69f00 bg=#000000
2:10-10 fg=#ffffff bg=#000000
2:11-18 fg=#e69f00 bg=#000000 BOLD
2:19-19 fg=#ffffff bg=#000000
2:20-24 fg=#c6c6c6 bg=#000000
2:25-25 fg=#ffffff bg=#000000
2:26-26 fg=#ffe066 bg=#000000
2:28-58 fg=#ffffff bg=#000000
2:59-59 fg=#ffe066 bg=#000000
3:0-0 fg=#ffe066 bg=#000000
3:1-1 fg=#ffffff bg=#000000
3:2-2 fg=#e2c5ff bg=#000000
3:3-7 fg=#56b4e9 bg=#000000
3:8-8 fg=#ffffff bg=#000000
3:9-16 fg=#56b4e9 bg=#000000 BOLD
3:17-17 fg=#ffffff bg=#000000
3:18-22 fg=#c6c6c6 bg=#000000
3:23-58 fg=#ffffff bg=#000000
3:59-59 fg=#ffe066 bg=#000000
4:0-0 fg=#ffe066 bg=#000000
4:1-1 fg=#ffffff bg=#000000
4:2-2 fg=#e2c5ff bg=#000000
4:3-15 fg=#009e73 bg=#000000
4:16-16 fg=#ffffff bg=#000000
4:17-24 fg=#009e73 bg=#000000 BOLD
4:25-25 fg=#ffffff bg=#000000
4:26-30 fg=#c6c6c6 bg=#000000
4:31-58 fg=#ffffff bg=#000000
4:59-59 fg=#ffe066 bg=#000000
5:0-59 fg=#ffe066 bg=#000000
=== text (ascii) ===
#= > Branches =============================================#
# o main                                                   #
# |--o-o-o claude-1 +3 -1 [c]                              #
# |--o-o claude-2 +2 -0                                    #
# `--o-o-o-o-o-o claude-3 +9 -4                            #
#==========================================================#
=== styles (truecolor, ascii) ===
0:0-4 fg=#ffe066
0:5-12 fg=#ffe066 BOLD
0:13-59 fg=#ffe066
1:0-0 fg=#ffe066
1:2-2 fg=#bc8cff
1:4-7 fg=#bc8cff BOLD
1:59-59 fg=#ffe066
2:0-0 fg=#ffe066
2:2-2 fg=#bc8cff
2:3-9 fg=#e69f00
2:11-18 fg=#e69f00 BOLD
2:20-24 fg=#949494
2:26-28 fg=#d29922
2:59-59 fg=#ffe066
3:0-0 fg=#ffe066
3:2-2 fg=#bc8cff
3:3-7 fg=#56b4e9
3:9-16 fg=#56b4e9 BOLD
3:18-22 fg=#949494
3:59-59 fg=#ffe066
4:0-0 fg=#ffe066
4:2-2 fg=#bc8cff
4:3-15 fg=#009e73
4:17-24 fg=#009e73 BOLD
4:26-30 fg=#949494
4:59-59 fg=#ffe066
5:0-59 fg=#ffe066
=== styles (256, ascii) ===
0:0-4 fg=@221
0:5-12 fg=@221 BOLD
0:13-59 fg=@221
1:0-0 fg=@221
1:2-2 fg=@141
1:4-7 fg=@141 BOLD
1:59-59 fg=@221
2:0-0 fg=@221
2:2-2 fg=@141
2:3-9 fg=@178
2:11-18 fg=@178 BOLD
2:20-24 fg=@246
2:26-28 fg=@172
2:59-59 fg=@221
3:0-0 fg=@221
3:2-2 fg=@141
3:3-7 fg=@74
3:9-16 fg=@74 BOLD
3:18-22 fg=@246
3:59-59 fg=@221
4:0-0 fg=@221
4:2-2 fg=@141
4:3-15 fg=@36
4:17-24 fg=@36 BOLD
4:26-30 fg=@246
4:59-59 fg=@221
5:0-59 fg=@221
=== styles (16, ascii) ===
0:0-4 fg=LightYellow
0:5-12 fg=LightYellow BOLD
0:13-59 fg=LightYellow
1:0-0 fg=LightYellow
1:2-2 fg=Magenta
1:4-7 fg=Magenta BOLD
1:59-59 fg=LightYellow
2:0-0 fg=LightYellow
2:2-2 fg=Magenta
2:3-9 fg=Yellow
2:11-18 fg=Yellow BOLD
2:20-24 fg=DarkGray
2:26-28 fg=Yellow
2:59-59 fg=LightYellow
3:0-0 fg=LightYellow
3:2-2 fg=Magenta
3:3-7 fg=Cyan
3:9-16 fg=Cyan BOLD
3:18-22 fg=DarkGray
3:59-59 fg=LightYellow
4:0-0 fg=LightYellow
4:2-2 fg=Magenta
4:3-15 fg=Green
4:17-24 fg=Green BOLD
4:26-30 fg=DarkGray
4:59-59 fg=LightYellow
5:0-59 fg=LightYellow
=== styles (no-color, ascii) ===
0:0-59 BOLD | REVERSED
1:0-0 BOLD | REVERSED
1:4-7 BOLD
1:59-59 BOLD | REVERSED
2:0-0 BOLD | REVERSED
2:11-18 BOLD
2:20-24 DIM
2:26-28 BOLD
2:59-59 BOLD | REVERSED
3:0-0 BOLD | REVERSED
3:9-16 BOLD
3:18-22 DIM
3:59-59 BOLD | REVERSED
4:0-0 BOLD | REVERSED
4:17-24 BOLD
4:26-30 DIM
4:59-59 BOLD | REVERSED
5:0-59 BOLD | REVERSED
=== styles (high-contrast, ascii) ===
0:0-4 fg=#ffe066 bg=#000000
0:5-12 fg=#ffe066 bg=#000000 BOLD
0:13-59 fg=#ffe066 bg=#000000
1:0-0 fg=#ffe066 bg=#000000
1:1-1 fg=#ffffff bg=#000000
1:2-2 fg=#e2c5ff bg=#000000
1:3-3 fg=#ffffff bg=#000000
1:4-7 fg=#e2c5ff bg=#000000 BOLD
1:8-58 fg=#ffffff bg=#000000
1:59-59 fg=#ffe066 bg=#000000
2:0-0 fg=#ffe066 bg=#000000
2:1-1 fg=#ffffff bg=#000000
2:2-2 fg=#e2c5ff bg=#000000
2:3-9 fg=#e69f00 bg=#000000
2:10-10 fg=#ffffff bg=#000000
2:11-18 fg=#e69f00 bg=#000000 BOLD
2:19-19 fg=#ffffff bg=#000000
2:20-24 fg=#c6c6c6 bg=#000000
2:25-25 fg=#ffffff bg=#000000
2:26-28 fg=#ffe066 bg=#000000
2:29-58 fg=#ffffff bg=#000000
2:59-59 fg=#ffe066 bg=#000000
3:0-0 fg=#ffe066 bg=#000000
3:1-1 fg=#ffffff bg=#000000
3:2-2 fg=#e2c5ff bg=#000000
3:3-7 fg=#56b4e9 bg=#000000
3:8-8 fg=#ffffff bg=#000000
3:9-16 fg=#56b4e9 bg=#000000 BOLD
3:17-17 fg=#ffffff bg=#000000
3:18-22 fg=#c6c6c6 bg=#000000
3:23-58 fg=#ffffff bg=#000000
3:59-59 fg=#ffe066 bg=#000000
4:0-0 fg=#ffe066 bg=#000000
4:1-1 fg=#ffffff bg=#000000
4:2-2 fg=#e2c5ff bg=#000000
4:3-15 fg=#009e73 bg=#000000
4:16-16 fg=#ffffff bg=#000000
4:17-24 fg=#009e73 bg=#000000 BOLD
4:25-25 fg=#ffffff bg=#000000
4:26-30 fg=#c6c6c6 bg=#000000
4:31-58 fg=#ffffff bg=#000000
4:59-59 fg=#ffe066 bg=#000000
5:0-59 fg=#ffe066 bg=#000000
