apps/cli/src/tui/widgets/snapshots/graphlanes__unattributed_commits.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
┌─ Branches ───────────────────────────────────────────────┐
│ • main                                                   │
│ ├──•─• claude-1 ↑2 ↓0                                    │
│ └──• unattributed (hotfix/login) ↑1 ↓0                   │
└──────────────────────────────────────────────────────────┘
=== styles (truecolor, unicode) ===
0:0-2 fg=#8a8a8a
0:3-10 fg=#8a8a8a BOLD
0:11-59 fg=#8a8a8a
1:0-0 fg=#8a8a8a
1:2-2 fg=#bc8cff
1:4-7 fg=#bc8cff BOLD
1:59-59 fg=#8a8a8a
2:0-0 fg=#8a8a8a
2:2-2 fg=#bc8cff
2:3-7 fg=#e69f00
2:9-16 fg=#e69f00 BOLD
2:18-22 fg=#8a8a8a
2:59-59 fg=#8a8a8a
3:0-0 fg=#8a8a8a
3:2-2 fg=#bc8cff
3:3-5 fg=#8a8a8a
3:7-33 fg=#8a8a8a
3:35-39 fg=#8a8a8a
3:59-59 fg=#8a8a8a
4:0-59 fg=#8a8a8a
=== styles (256, unicode) ===
0:0-2 fg=@245
0:3-10 fg=@245 BOLD
0:11-59 fg=@245
1:0-0 fg=@245
1:2-2 fg=@141
1:4-7 fg=@141 BOLD
1:59-59 fg=@245
2:0-0 fg=@245
2:2-2 fg=@141
2:3-7 fg=@178
2:9-16 fg=@178 BOLD
2:18-22 fg=@245
2:59-59 fg=@245
3:0-0 fg=@245
3:2-2 fg=@141
3:3-5 fg=@245
3:7-33 fg=@245
3:35-39 fg=@245
3:59-59 fg=@245
4:0-59 fg=@245
=== styles (16, unicode) ===
0:0-2 fg=DarkGray
0:3-10 fg=DarkGray BOLD
0:11-59 fg=DarkGray
1:0-0 fg=DarkGray
1:2-2 fg=Magenta
1:4-7 fg=Magenta BOLD
1:59-59 fg=DarkGray
2:0-0 fg=DarkGray
2:2-2 fg=Magenta
2:3-7 fg=Yellow
2:9-16 fg=Yellow BOLD
2:18-22 fg=DarkGray
2:59-59 fg=DarkGray
3:0-0 fg=DarkGray
3:2-2 fg=Magenta
3:3-5 fg=DarkGray
3:7-33 fg=DarkGray
3:35-39 fg=DarkGray
3:59-59 fg=DarkGray
4:0-59 fg=DarkGray
=== styles (no-color, unicode) ===
0:0-2 DIM
0:3-10 BOLD | DIM
0:11-59 DIM
1:0-0 DIM
1:4-7 BOLD
1:59-59 DIM
2:0-0 DIM
2:9-16 BOLD
2:18-22 DIM
2:59-59 DIM
3:0-0 DIM
3:3-5 DIM
3:7-33 DIM
3:35-39 DIM
3:59-59 DIM
4:0-59 DIM
=== styles (high-contrast, unicode) ===
0:0-2 fg=#c6c6c6 bg=#000000
0:3-10 fg=#c6c6c6 bg=#000000 BOLD
0:11-59 fg=#c6c6c6 bg=#000000
1:0-0 fg=#c6c6c6 bg=#000000
1:1-1 fg=#ffffff bg=#000000
1:2-2 fg=#e2c5ff bg=#000000
1:3-3 fg=#ffffff bg=#000000
1:4-7 fg=#e2c5ff bg=#000000 BOLD
1:8-58 fg=#ffffff bg=#000000
1:59-59 fg=#c6c6c6 bg=#000000
2:0-0 fg=#c6c6c6 bg=#000000
2:1-1 fg=#ffffff bg=#000000
2:2-2 fg=#e2c5ff bg=#000000
2:3-7 fg=#e69f00 bg=#000000
2:8-8 fg=#ffffff bg=#000000
2:9-16 fg=#e69f00 bg=#000000 BOLD
2:17-17 fg=#ffffff bg=#000000
2:18-22 fg=#c6c6c6 bg=#000000
2:23-58 fg=#ffffff bg=#000000
2:59-59 fg=#c6c6c6 bg=#000000
3:0-0 fg=#c6c6c6 bg=#000000
3:1-1 fg=#ffffff bg=#000000
3:2-2 fg=#e2c5ff bg=#000000
3:3-5 fg=#c6c6c6 bg=#000000
3:6-6 fg=#ffffff bg=#000000
3:7-33 fg=#c6c6c6 bg=#000000
3:34-34 fg=#ffffff bg=#000000
3:35-39 fg=#c6c6c6 bg=#000000
3:40-58 fg=#ffffff bg=#000000
3:59-59 fg=#c6c6c6 bg=#000000
4:0-59 fg=#c6c6c6 bg=#000000
=== text (ascii) ===
+- Branches -----------------------------------------------+
| o main                                                   |
| |--o-o claude-1 +2 -0                                    |
| `--o unattributed (hotfix/login) +1 -0                   |
+----------------------------------------------------------+
=== styles (truecolor, ascii) ===
0:0-2 fg=#8a8a8a
0:3-10 fg=#8a8a8a BOLD
0:11-59 fg=#8a8a8a
1:0-0 fg=#8a8a8a
1:2-2 fg=#bc8cff
1:4-7 fg=#bc8cff BOLD
1:59-59 fg=#8a8a8a
2:0-0 fg=#8a8a8a
2:2-2 fg=#bc8cff
2:3-7 fg=#e69f00
2:9-16 fg=#e69f00 BOLD
2:18-22 fg=#8a8a8a
2:59-59 fg=#8a8a8a
3:0-0 fg=#8a8a8a
3:2-2 fg=#bc8cff
3:3-5 fg=#8a8a8a
3:7-33 fg=#8a8a8a
3:35-39 fg=#8a8a8a
3:59-59 fg=#8a8a8a
4:0-59 fg=#8a8a8a
